# OpenGL-Tiny-Engine

./: CMakeLists.txt  README.md
TinyEngineCore/: CMakeLists.txt
TinyEngineCore/include/: Application.h  Buffer.h  Camera.h  Common.h  Config.h  Material.h  Mesh.h  Model.h  OpenGLContext.h  OpenGLWindow.h  ResourceManager.h  Scene.h  SceneManager.h  Shader.h  StateManager.h  Texture.h  Transform.h  UIContext.h
TinyEngineCore/include/3rd/glad/: glad.h
TinyEngineCore/include/3rd/imgui/backends/: imgui_impl_glfw.h  imgui_impl_opengl3.cpp
TinyEngineCore/include/Context/: OpenGLContext.h  OpenGLWindow.h  UIContext.h
TinyEngineCore/include/Geometry/: Mesh.h  Model.h  VertexArray.h
TinyEngineCore/include/Graphics/: Buffer.h  Camera.h  Cubemap.h  Framebuffer.h  Material.h  PostProcessEffect.h  PostProcessVolume.h  Scene.h  ScreenBuffer.h  Shader.h  Skybox.h  Texture.h  Texture2D.h
TinyEngineCore/include/Graphics/PostProcessEffects/: BloomEffect.h  PostProcessEffect.h  VignetteEffect.h  WhiteBalanceEffect.h
TinyEngineCore/include/Manager/: ResourceManager.h  Scene.h  SceneManager.h  StateManager.h
TinyEngineCore/include/imgui/backends/: imgui_impl_glfw.cpp
TinyEngineCore/lib/: glfw3.lib
TinyEngineCore/src/: Camera.cpp  Material.cpp  Shader.cpp  Texture.cpp  TinyEngine.cpp
TinyEngineCore/src/glad/: glad.c
resources/: resources.json
resources/materials/: cube.json  cube2.json  planet.json  rock.json
resources/scenes/: NanosuitScene.json  PlanetScene.json  PlanetScene2.json  SkyboxScene.json  SomePlanetsScene.json  TwoPlanetScene.json
(+22 files in other folders)
